compile_fail_tests/destructure/tuple_arity_too_low.rs
use const_tools::destructure;

fn main() {
    destructure!(let (a,) = (1, 2));
}
