compile_fail_tests/destructure/tuple_arity_too_low.stderr
error[E0308]: mismatched types
 --> compile_fail_tests/destructure/tuple_arity_too_low.rs:4:29
  |
4 |     destructure!(let (a,) = (1, 2));
  |     ------------------------^^^^^^-
  |     |                       |
  |     |                       expected a tuple with 1 element, found one with 2 elements
  |     expected due to this
  |
  = note: expected tuple `({integer},)`
             found tuple `({integer}, {integer})`
